--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>CWD &copy; Training</title>
   </head>
   <body>
@@ -78,7 +78,7 @@
             <div class="container">
                 <h2 class="lead-head">Trainees Experience</h2>
                 <div class="testimonial bg-primary">
-                    <img src="/image/girl.jpg" alt="trainee-1">
+                    <img src="image/girl.jpg" alt="trainee-1">
                     </img>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Pariatur tenetur perspiciatis hic suscipit in dolore maxime
@@ -89,7 +89,7 @@
                     </p>
                 </div>
                 <div class="testimonial bg-primary">
-                    <img src="/image/boy-client.jpg" alt="trainee-2">
+                    <img src="image/boy-client.jpg" alt="trainee-2">
                     </img>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Pariatur tenetur perspiciatis hic suscipit in dolore maxime
